solve studied_at problem, plus solve layout problem in decks show caused by it

--- a/app/assets/stylesheets/components/_deck_list.scss
+++ b/app/assets/stylesheets/components/_deck_list.scss
@@ -50,7 +50,7 @@
 }
 
 .white-container {
-  margin: 0 10% 0 -5%;
+  margin: 0 5% 0 0;
   background-color: $white;
   border-radius: 0px;
   position: relative;
@@ -59,7 +59,7 @@
 
 .filters-container {
   width: 20%;
-  margin: 10% 0 10% 5%;
+  margin-top: 5%;
   font-size: 24px;
   color: #86C1D2;
 }
